--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         </section>
     </header>
     <main>
+         <!-- cards secrion-->
         <section class="max-w-screen-xl mx-auto px-8 lg:px-24 py-5 my-10  ">
             <div class="text-center">
                 <h1 class="text-2xl md:text-4xl">Huge Collection</h1>
@@ -133,6 +134,20 @@
                             <button class="btn ">explore</button>
                         </div>
                     </div>
+                </div>
+            </div>
+
+
+        </section>
+        <!-- featured section -->
+        <section class="max-w-screen-xl mx-auto px-8 md:px-16 lg:px-24 py-10 my-10">
+            <div  class="flex flex-col md:flex-row gap-10 items-center">
+                <div>
+                    <h1 class="text-2xl md:text-4xl mb-2">Easy Purchase</h1>
+                    <p>we believe that style is a reflection of your unique personality and our mission is to provide you with a diverse and trendy collection.Our mission is to provide you with a diverse and trendy collection.</p>
+                </div>
+                <div>
+                    <img src="./images/easy-purchase.avif" alt="">                    
                 </div>
             </div>
 
