--- a/index.html
+++ b/index.html
@@ -91,11 +91,12 @@
         </section>
     </header>
     <main>
-         <!-- cards secrion-->
+        <!-- cards secrion-->
         <section class="max-w-screen-xl mx-auto px-8 lg:px-24 py-5 my-10  ">
-            <div class="text-center">
+            <!-- heading -->
+            <div class="text-center pb-5">
                 <h1 class="text-2xl md:text-4xl">Huge Collection</h1>
-                <p>Browse from a various collections</p>
+                <p class="text-sm">Browse from a various collections</p>
             </div>
             <!-- cards -->
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5">
@@ -139,16 +140,80 @@
 
 
         </section>
+
         <!-- featured section -->
         <section class="max-w-screen-xl mx-auto px-8 md:px-16 lg:px-24 py-10 my-10">
-            <div  class="flex flex-col md:flex-row gap-10 items-center">
+            <div class="flex flex-col md:flex-row gap-10 items-center">
                 <div>
                     <h1 class="text-2xl md:text-4xl mb-2">Easy Purchase</h1>
-                    <p>we believe that style is a reflection of your unique personality and our mission is to provide you with a diverse and trendy collection.Our mission is to provide you with a diverse and trendy collection.</p>
+                    <p>we believe that style is a reflection of your unique personality and our mission is to provide
+                        you with a diverse and trendy collection.Our mission is to provide you with a diverse and trendy
+                        collection.</p>
                 </div>
                 <div>
-                    <img src="./images/easy-purchase.avif" alt="">                    
+                    <img src="./images/easy-purchase.avif" alt="">
                 </div>
+            </div>
+
+
+        </section>
+
+        <!-- top product section -->
+        <section class="max-w-screen-xl mx-auto px-8 md:px-16 lg:px-24 py-10 my-10">
+            <!-- heading -->
+            <div class="text-center pb-5">
+                <h1 class="text-2xl md:text-4xl">Top Products</h1>
+                <p class="text-sm">Browse from a various collections</p>
+            </div>
+            <!-- card -->
+            <div class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5">
+
+
+
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img src="./images/elegant-businessman-attire-hangs-modern-closet-generated-by-ai_188544-15312.avif" alt="" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Formal Shirt</h2>
+                        <p>Our mission is to provide you with a diverse and trendy collections.</p>
+                        <div class="card-actions justify-end">
+                            <button class="btn">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img src="./images/shiny-black-leather-shoes-exude-modern-luxury-generated-by-ai_188544-36154.avif" alt="" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Formal Shoe</h2>
+                        <p>Our mission is to provide you with a diverse and trendy collections.</p>
+                        <div class="card-actions justify-end">
+                            <button class="btn">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img src="./images/blue-yellow-t-shirt-wooden-hanger-generated-by-ai_188544-42185.avif" alt="" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Trendy T-Shirt</h2>
+                        <p>Our mission is to provide you with a diverse and trendy collections.</p>
+                        <div class="card-actions justify-end">
+                            <button class="btn">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img src="./images/elegant-businessman-shirt-wooden-desk-stack-generated-by-ai_188544-34678.avif" alt="" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Casual Shirt</h2>
+                        <p>Our mission is to provide you with a diverse and trendy collections.</p>
+                        <div class="card-actions justify-end">
+                            <button class="btn">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
             </div>
 
 
